--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ gemfile:
   - Gemfile
 script:
   - bundle install --jobs=3 --retry=3
+  - bundle exec rake pod:install
   - bundle exec rake clean
   - bundle exec rake spec
