xcode8.3 and ruby 2.4 (#70)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: objective-c
-osx_image: xcode8
+osx_image: xcode8.3
 branches:
   only:
     - travis
@@ -7,8 +7,9 @@ branches:
     - release
     - master
 before_install:
+  - gpg2 --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
   - rvm get stable --auto-dotfiles
-  - rvm use 2.3 --install --binary --fuzzy
+  - rvm use 2.4 --install --binary --fuzzy
   - (ruby --version)
   - sudo motion update
 gemfile:
