--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
     - release
     - master
 before_install:
-  - gpg2 --keyserver hkp://keys.gnupg.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3
+  - curl -sSL https://rvm.io/mpapis.asc | gpg --import -
   - rvm get stable --auto-dotfiles
   - rvm use 2.4 --install --binary --fuzzy
   - (ruby --version)
