--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ gemfile:
   - Gemfile
 script:
   - bundle install --jobs=3 --retry=3
-#  - bundle exec rake pod:install
+  - bundle exec rake pod:install
   - bundle exec rake clean spec device_name='iPhone X'
