--- a/.gitignore
+++ b/.gitignore
@@ -15,14 +15,7 @@ nbproject
 .sass-cache
 .idea
 .dat*.*
-
-provisioning
-vendor/Pods
-*.swp
-*.orig
-resources/*.xcdatamodeld
-resources/fontawesome-webfont.ttf
-resources/fontawesome.plist
-resources/Settings.bundle
-*.storyboardc
-ib.xcodeproj
+vendor/Pods/
+ib.xcodeproj/
+provisioning/
+vendor/cache/
