--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ gemfile:
 script:
   - bundle install --jobs=3 --retry=3
   - bundle exec rake pod:install
-  - bundle exec rake clean spec device_name='iPhone X'
+  - bundle exec rake clean spec device_name='iPhone X' output=tap
