--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: objective-c
 os: osx
 osx_image: xcode9.1
+cache:
+  bundler: true
+  cocoapods: true
+  directories:
+    - $HOME/.rvm/
 branches:
   only:
     - travis
