--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ before_install:
 gemfile:
   - Gemfile
 script:
-  - bundle install --jobs=3 --retry=3
+  - bundle install --deployment --jobs=3 --retry=3
   - bundle exec rake pod:install
   - bundle exec rake clean spec device_name='iPhone X' output=tap
