--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: objective-c
 os: osx
 osx_image: xcode9.1
+cache:
+  bundler: true
+  cocoapods: true
+  directories:
+    - $HOME/.rvm/
 branches:
   only:
     - travis
@@ -16,6 +21,6 @@ before_install:
 gemfile:
   - Gemfile
 script:
-  - bundle install --jobs=3 --retry=3
+  - bundle install --deployment --jobs=3 --retry=3
   - bundle exec rake pod:install
   - bundle exec rake clean spec device_name='iPhone X' output=tap
