--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ osx_image: xcode9.1
 cache:
   bundler: true
   cocoapods: true
-  directories:
-    - $HOME/.rvm/
+  directories: []
 branches:
   only:
     - travis
