--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: objective-c
-os: osx
-osx_image: xcode9.1
+matrix:
+  include:
+    - os: osx
+      osx_image: xcode9.1
+    - os: osx
+      osx_image: xcode8.3
 cache:
   bundler: true
   cocoapods: true
@@ -17,9 +21,7 @@ before_install:
   - rvm use 2.4 --default --install --binary --fuzzy
   - (ruby --version)
   - sudo motion update
-gemfile:
-  - Gemfile
+  - (motion --version)
 script:
-  - bundle install --deployment --jobs=3 --retry=3
   - bundle exec rake pod:install
   - bundle exec rake clean spec device_name='iPhone X' output=tap
